--- a/css/customStyle.css
+++ b/css/customStyle.css
@@ -1,25 +1,32 @@
-.bg{
-	background-image:url("../images/Taipei.jpg");
-	background-size:100% auto;
-}
-
-.bg1{
-	background-color: #a4adb9;
-}
-
-.bg2{
-    background-color: #f5f5f5;
-}
-
 a:link{
 	color: black;
 }
 
-.container{
+.bg {
+    background-image:url("../images/Taipei.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bg1 {
+    background-color: #a4adb9;
+}
+
+.bg2 {
+    background-color: #f5f5f5;
+}
+
+.container {
 	padding-top: 10px;
 }
 
-.overlay{
+
+.img-circle {
+    padding-top: 10px;
+    padding-bottom: 30px;
+}
+
+.overlay {
 	background-color: rgba(0,0,0,0.6);
 	z-index:1;
 }
