--- a/css/customStyle.css
+++ b/css/customStyle.css
@@ -31,9 +31,14 @@ p {
     background-color: black;
 }
 
+.navbar-nav .open .dropdown-menu{
+    position: absolute;
+    background-color: black;
+}
+
 .dropdown-item{
     padding: 5px;
-    display: block;
+    display: inline-block;
 }
 
 .img-circle {
@@ -93,7 +98,7 @@ p {
 .navbar-custom .navbar-nav > .open > a, 
 .navbar-custom .navbar-nav > .open > a:hover, 
 .navbar-custom .navbar-nav > .open > a:focus {
-    color: #fff;
+    color: #ffffff;
     background-color: #333;
 }
 .navbar-custom .navbar-nav > .dropdown > a .caret {
