Upadte title icon

--- a/css/customStyle.css
+++ b/css/customStyle.css
@@ -36,6 +36,11 @@ p {
     color: white;
 }
 
+#dropdownMenu:not(:focus) {
+    background-color: black;
+    color: white;
+}
+
 .dropdown-item{
     padding: 5px;
     display: block;
