--- a/css/customStyle.css
+++ b/css/customStyle.css
@@ -21,6 +21,11 @@ p {
     background-color: #f5f5f5;
 }
 
+.btn {
+    margin-top: 10px;
+    padding: 0px 16px 0px 16px ;
+}
+
 .container {
 	padding-top: 10px;
     padding-bottom: 10px;
