--- a/css/customStyle.css
+++ b/css/customStyle.css
@@ -60,6 +60,11 @@ p {
 	z-index:1;
 }
 
+.progress {
+    height: 8px;
+    margin-bottom: 10px;
+}
+
 .progress-bar-success {
     background-image: -webkit-gradient(linear, left top, right top, from(rgba(230,230,230,1)),to(rgba(255,230,20,0.6)), color-stop(0,rgba(255,255,255,0)));
 }
